# Kernel

./: Cargo.toml  README.md  loop.asm  rust-toolchain.toml  rustup_1.26.0-5build1_amd64.deb
.cargo/: config.toml
src/: allocator.rs  build.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/arch/x86_64/: switch.S
src/syscall/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/threads/: mod.rs  scheduler.rs
tests/: basic_boot.rs  heap_allocations.rs  should_panic.rs  stack_overflow.rs
user_programs/: ali_prog.c  ali_prog.elf  ferris_say.c  ferris_say.elf  hello_world.c  hello_world.elf  loop.c  loop.elf  mem_print.c  mem_print.elf  printf_test.c  printf_test.elf  rock_paper_scissors.c  rock_paper_scissors.elf  sys_out  syscall_test.c  syscall_test.elf
user_programs/mini_c_stdlib/: malloc.c  malloc.h  syscalls.c  syscalls.h
