[package]
name = "meowl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "meowl"
test = true
bench = false

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"]}
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5.0" , features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.10.0"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.15.4"
xmas-elf = { version = "0.10.0", default-features = false}

[profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"    
]
test-success-exit-code = 33

[[test]]
name = "stack_overflow"
harness = false

[build-dependencies]
cc = "1.0"
